--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,14 +1,22 @@
-<% if current_user == comment.user %>
-  <div class="medium-12 columns comment_patient">
+<% if current_user.role != "patient" %>
+<div class="medium-8 columns comment_patient">
   <% else %>
-  <div class="medium-12 columns comment-right right">
+  <div class="medium-offset-8 columns comment-right right">
     <% end %>
-    <li>
-      <ul>
-        <li>Comment by: <%= comment.user.try(:first_name) %> <%= comment.user.try(:last_name) %></li>
-        <p><%= comment.comment %></p>
-      </ul>
-    </li> 
+
+
+          <div class="consultation-row row">
+            <li>
+              <ul>
+                
+                <p><%= comment.comment %></p>
+                <li class="floatright"><small class="text-muted"> --<%= comment.user.try(:first_name) %> <%= comment.user.try(:last_name) %></small></li>
+              </ul>
+            </li> 
+
+
+    </div>
   </div>
+
 
 
