--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,6 +1,11 @@
+<div class="content medium-12 columns topper">
+  <p class="biggerp">Comments
+  </p>
+</div>
+
 <%= form_for(:comment, url: comments_path(commentable_type: commentable.class.to_s.underscore, commentable_id: commentable.id)) do |f| %>
 
   <%= f.text_area :comment, placeholder: "Write a Comment", class:"expand" %>
- <div class="topperhighlight"> <%= f.submit "COMMENT", class:"topperhighlight button"%> </div>
+ <div class="topperhighlight"> <%= f.submit "ADD", class:"topperhighlight button"%> </div>
 
 <% end %>
