--- a/app/views/consultations/show.html.erb
+++ b/app/views/consultations/show.html.erb
@@ -1,4 +1,4 @@
-
+<% if current_user.role == "doctor" %> 
 <div class="medium-2 columns card">
   <div class="content medium-12 columns topper">
     <p class="card-text biggerp smaller">Patient</p>
@@ -9,24 +9,34 @@
       <%= image_tag @consultation.user.image %>
     </div>
     <div class="back">
-      <h5>Patient details</h5>
-      <p class="card-text"><%= @consultation.user.first_name %></p>
-      <p class="card-text"><%= @consultation.user.last_name %></p>
-      <p class="card-text">User name: <%= @consultation.user.email %></p>
+    <br>
+      <h5>Details</h5>
+      <p class="card-text smaller"></p>
+    <p class="card-text"><p class="fieldname">Name</p>
+    <%= @consultation.user.first_name %> <%= @consultation.user.last_name %>
+    </p>
+      <p class="card-text"><p class="fieldname">email</p>
+      <%= @consultation.user.email %>
+      </p>
     </div>
   </div>
   <div class="content medium-12 columns whitebg">
     <p class="card-text biggerp smaller"><%= @consultation.user.first_name %></p>
   </div>
 </div>
+<% end %>
 
 
+<% if current_user.role == "patient"%>
+<div class="medium-8 columns" style="margin-bottom: 15px;">
+<% else %>
+<div class="medium-7 columns" style="margin-bottom: 15px;">
+<% end %>
 
-<div class="medium-7 columns">
   <div class="card-deck-wrapper rounded">
     <div class="card-deck">
       <div class="card whitebg">
-        <div class="consultation-row row">
+        <div class="row">
           <div class="content medium-12 columns topper">
             <p class="biggerp">Consultation
               <span class="right"><%= @consultation.created_at.strftime("%d/%m/%y")%></span>
@@ -42,171 +52,93 @@
           </div>
         </div>  
         <div class="consultation-row row">
-          <div class="medium-12 columns">
-          <hr>
+          <div class="medium-12 columns" style="margin-top: 20px">
+            <hr>
             <p class="card-text centerp" style="text-align: center">
-              This <span class="highlighted"><%= @consultation.type_of.downcase %></span> 
+              <span>This <span class="highlighted"><%= @consultation.type_of.downcase %></span> 
               consultation is 
 
               <% if @consultation.status == "pending" %>
-                <span class="right"> currently <%= @consultation.status %></span>
+               currently <%= @consultation.status %>
               <% end %>
 
               <% if @consultation.doctor %>
               assigned to 
-                <% if current_user.role == "doctor" %> 
-                  you 
-                <% else %> 
-                  <%= @consultation.doctor.username %>
-                <% end %>
-              </p>
+              <% if current_user.role == "doctor" %> 
+              you 
+              <% else %> 
+              <%= @consultation.doctor.username %>
               <% end %>
+              </span>
+            </p>
+            <% end %>
           </div> <!-- End of medium-12 columns -->
         </div> <!-- End of consultation-row row -->
+      </div>
+    </div>
+  </div>
 
-        <div class="consultation-row row">
-          <div class="medium-12 columns">
+  <% if current_user.role == "doctor" %> 
+
+  <div class="card-deck-wrapper rounded">
+    <div class="card-deck">
+      <div class="card whitebg">
+        <div class="comments-form-row consultation-row row">
+        
           <%= render partial: 'comments/form', locals: { commentable: @consultation } %>
-          </div>
+        
+
         </div>
-
-        <div class="consultation-row row">
-          
-          <%= render partial: 'comments/comment', collection: @comments, locals: { commentable: @consultation } %>
-          
-        </div>
-
-
       </div>
     </div>
   </div>
-  <div class="card-deck-wrapper rounded">
-    <div class="card-deck">
-      <div class="card whitebg">
-        <div class="consultation-row row">
+
+
+<div>
+
+        
+        
+        <%= render partial: 'comments/comment', collection: @comments, locals: { commentable: @consultation } %>
+
 </div>
-</div>
-</div>
-</div>
+<% end %>
 </div>
 
 
 
 
-<div class="medium-3 columns treatment-card">
+
+
+
+
+
 
   <% if !@treatment.nil? %>
   <%= render partial: "treatments/treatment", object: @treatment, as: 'treatment' %>
   <% else %>
-  <%= link_to "Heal", new_consultation_treatment_path(@consultation), class: "button btn-btn-primary" %>
-  <p class="centerp">Treatment presciption pending</p>
-  <% end %>
-
-</div>
-
-
-
-<hr>
-<hr>
-<hr>
-
-
-
-
-
-
-<!-- <div class="row"> -->
-<div class="medium-3 columns healbutton">
-
-  <% if !@treatment.nil? %>
-  <%= render partial: "treatments/treatment", object: @treatment, as: 'treatment' %>
+  <% if current_user.role == "doctor"%>
+  <%= link_to "Heal", new_consultation_treatment_path(@consultation), class: "button btn-btn-primary accept-btn" %>
   <% else %>
-  <%= link_to "Heal", new_consultation_treatment_path(@consultation), class: "button btn-btn-primary" %>
-  <p>Treatment presciption pending</p>
-  <% end %>
-</div>
-
-<div class="card medium-2 columns">
-  <div class="content medium-12 columns topper">
-    <p class="card-text biggerp smaller">Patient</p>
-  </div>
-  <br>
-  <div class="container">
-    <div class="front bordernone">
-      <%= image_tag @consultation.user.image %>
-    </div>
-    <div class="back">
-      <h5>Patient details</h5>
-      <p class="card-text"><%= @consultation.user.first_name %></p>
-      <p class="card-text"><%= @consultation.user.last_name %></p>
-      <p class="card-text">User name: <%= @consultation.user.email %></p>
-    </div>
-  </div>
-  <div class="content medium-12 columns whitebg">
-    <p class="card-text biggerp smaller"><%= @consultation.user.first_name %></p>
-  </div>
-</div>
-
-<div class="medium-7 columns">
+  <div class="medium-4 columns treatment-card">
   <div class="card-deck-wrapper rounded">
     <div class="card-deck">
       <div class="card whitebg">
-
-
-        <div class="row">
-          <div class="content medium-12 columns topper">
-            <p class="biggerp">Consultation
-
-
-              <span class="right"><%= @consultation.created_at.strftime("%d/%m/%y")%><span></p>
-              </div>
-              <div class="image medium-3 columns"> 
-                <%= image_tag @consultation.image %>
-                <span class="title"></span>
-              </div>
-              <div class="content medium-9 columns">
-                <p class="card-text"><%= @consultation.brief %></p>
-                <hr>
-
-                <p class="card-text">This <span class="strong green"><%= @consultation.type_of.downcase %></span> consultation is <% if @consultation.status == "pending" %>
-                  <span class="right"> currently <%= @consultation.status %></span>
-                  <% end %><% if @consultation.doctor %>
-
-                  assigned to <% if current_user.role == "doctor" %> you <% else %> <%= @consultation.doctor.username %></p>
-                  <% end %>
-
-                  <% end %></p>
-                  <p class="card-text"><small class="text-muted">Added <%= distance_of_time_in_words(Time.now, @consultation.created_at) %> ago</small></p>
-
-
-                  <% if current_user.role == "doctor" && @consultation.doctor_id == nil %>
-                  <div class="action">
-                    <%= link_to "Accept as doctor", accept_consultation_path(@consultation), class: "button btn btn-success" %>
-                  </div>
-                  <% end %>
-
-
-
-                </div>
-              </div>
-            </div>      
-
-            
-            <%= render partial: 'comments/form', locals: { commentable: @consultation } %>
-
-            <%= render partial: 'comments/comment', collection: @comments, locals: { commentable: @consultation } %>
-
-
-          </div>
+        <div class="consultation-row row">
+        <div class="content medium-12 columns topper">
+          <p class="biggerp">Comments
+          </p>
         </div>
-
-
+        
+          <%= render partial: 'comments/form', locals: { commentable: @consultation } %>
+        
+        <%= render partial: 'comments/comment', collection: @comments, locals: { commentable: @consultation } %>
+        </div>
       </div>
-
     </div>
+  </div>
+  <% end %>
+  <% end %>
 
+</div>
 
-
-
-    <!-- </div> -->
 
