--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,8 +1,8 @@
 <header class="contain-to-grid  headergap">
   <nav class="top-bar" data-topbar role="navigation">
     <ul class="title-area">
-      <li class="name">
-        <h1><a href="/">Heal App</a></h1>
+      <li>
+      <%= image_tag("sage-logo") %>
       </li>
       <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
       <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
@@ -16,11 +16,7 @@
 
 
         <% if user_signed_in? %>
-          <% if current_user.image.present? %>
 
-            <li><%= image_tag(current_user.image) %></li> 
-            
-          <% end %>
 
 
             <% if current_user.role == "doctor" %>
