--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -152,7 +152,6 @@ height: 100%;
 
  header img {
    height: 2.2rem;
-   width: 2.2rem;
    -webkit-border-radius: 2px;
    -moz-border-radius: 2px;
    border-radius: 2px;
@@ -348,7 +347,15 @@ font-size: 1.2rem;
  color: #00A29C;
  background-color: transparent;
  padding: 1rem 3rem;
+}
 
+patient-accept-btn{
+  border-width: 2px;
+  border-style: none;
+  border-color: #00A29C;
+  color: #fff;
+  background-color: transparent;
+  padding: 0rem 3rem;
 }
 
 .smaller{
@@ -366,4 +373,8 @@ font-size: 1.2rem;
 .floatright{
   float: right;
   padding:10px;
+}
+
+body{
+  background-color: green;
 }
