--- a/app/views/consultations/_consultation.html.erb
+++ b/app/views/consultations/_consultation.html.erb
@@ -27,7 +27,7 @@
         <% end %>
       </div>
       <div class="action">
-      <%= link_to "View case", consultation_path(consultation), class: "btn btn-success highlighted" %>
+      <%= link_to "View case", consultation_path(consultation), class: "btn btn-success highlighted accept-btn right" %>
         <% if current_user.role == "doctor" && consultation.doctor_id == nil %>
 
         <%= link_to "Accept", accept_consultation_path(consultation), class: "button radius btn btn-success accept-btn" %>
