--- a/app/views/consultations/show.html.erb
+++ b/app/views/consultations/show.html.erb
@@ -122,12 +122,9 @@
   <div class="medium-4 columns treatment-card">
   <div class="card-deck-wrapper rounded">
     <div class="card-deck">
-      <div class="card whitebg">
+      <div class="card ">
         <div class="consultation-row row">
-        <div class="content medium-12 columns topper">
-          <p class="biggerp">Comments
-          </p>
-        </div>
+
         
           <%= render partial: 'comments/form', locals: { commentable: @consultation } %>
         
