--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -177,7 +177,7 @@ height: 100%;
    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
    color: #272727;
    margin: 0px 0px;
-   border-radius: 2px; }
+   border-radius: 4px; }
    .card .title {
      line-height: 3rem;
      font-size: 1.5rem;
@@ -324,6 +324,16 @@ treatment-card{
 
 textarea{
   margin: 0;
+  border-style: solid;
+  border-width: 2px;
+  border-color:  #00A29C;
+}
+
+.form-control{
+  margin: 0;
+  border-style: solid;
+  border-width: 2px; 
+  border-color:  #00A29C;
 }
 
 centerp{
@@ -348,6 +358,17 @@ font-size: 1.2rem;
  background-color: transparent;
  padding: 1rem 3rem;
 }
+
+
+.lower{
+  margin-top: 60px;
+  text-align: center;
+}
+
+.mainlogo.green{
+margin-top: 14px;
+}
+
 
 patient-accept-btn{
   border-width: 2px;
@@ -375,6 +396,14 @@ patient-accept-btn{
   padding:10px;
 }
 
-body{
-  background-color: green;
+header.loggedin{
+  color:  #00A29C;
+  background-color:  #00A29C ;
+}
+
+.form-control{
+  margin: 0;
+  border-style: solid;
+  border-width: 2px; 
+  border-color:  #00A29C;
 }
