--- a/app/views/application/_flash_messages.html.erb
+++ b/app/views/application/_flash_messages.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="row flashes">
   <% flash.each do |name, message| %>
     <div class="alert alert-<%= name %>" role="alert">
       <%= message %>
