--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,8 +1,12 @@
-<header class="contain-to-grid  headergap">
+<% if user_signed_in? %>
+<header class="contain-to-grid headergap loggedin">
+<%else%>
+<header class="contain-to-grid headergap">
+<%end%>
   <nav class="top-bar" data-topbar role="navigation">
     <ul class="title-area">
       <li>
-      <%= image_tag("sage-logo") %>
+      <%= image_tag("rsz_1rsz_logo-big-white") %>
       </li>
       <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
       <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
@@ -28,44 +32,58 @@
               </li>
               
             <% end %>
+
             <% if current_user.role == "patient" %>
             <li>
-              <%= link_to "Pending", pending_treatments_path, class: "nav-link" %>
+              <%= link_to "Search for a doctor", doctors_path, class: "btn btn-primary btn-lg", role: "button" %>
             </li>
 
-              <li><%= link_to "My Cases (patient)", cases_as_patient_path %></li> 
+            <li class="dropdownicon"><a href="#" data-dropdown="hover1" data-options="is_hover:true; hover_timeout:5000">Cases</a></li>
+            <ul id="hover1" class="f-dropdown" data-dropdown-content>
+            <li><%= link_to "All", cases_as_patient_path %></li> 
+            <li><%= link_to "Pending", pending_treatments_path, class: "nav-link" %></li>
+            </ul>
+
+
+
               
             <% end %>
             <% if current_user.role == "admin" %>
               <li><%= link_to "List Cases", consultations_path, class: "nav-link" %></li>
               <li><%= link_to "Doctor cases", cases_as_doctor_path %></li> 
               <li><%= link_to "Patient cases", cases_as_patient_path %></li> 
+              <li class="dropdownicon"><a href="#" data-dropdown="hover1" data-options="is_hover:true; hover_timeout:5000">Users</a></li>
+              <ul id="hover1" class="f-dropdown" data-dropdown-content>
+                <li>
+                <%= link_to "Users", users_path %>
+                </li> 
+                <li>
+                <%= link_to "Doctors", doctors_path %>
+                </li> 
+              </ul>
               
             <% end %>
 
-          <li class="dropdownicon"><a href="#" data-dropdown="hover1" data-options="is_hover:true; hover_timeout:5000">Users</a></li>
+          
 
-          <ul id="hover1" class="f-dropdown" data-dropdown-content>
-            <li>
-            <%= link_to "Users", users_path %>
-            </li> 
-            <li>
-            <%= link_to "Doctors", doctors_path %>
-            </li> 
-          </ul>
+
 
           
 
           
 
-         
+         <li class="dropdownicon"><a href="#" data-dropdown="hover1" data-options="is_hover:true; hover_timeout:5000">Messages</a></li>
+         <ul id="hover1" class="f-dropdown" data-dropdown-content>
+         <li class="nav-item">
+           <%= link_to "Inbox", inbox_path, class: "nav-link" %>
+         </li>
 
-          <li class="nav-item">
-            <%= link_to "Inbox", inbox_path, class: "nav-link" %>
-          </li>
-          <li>
-            <%= link_to "Outbox", outbox_path, class: "nav-link" %>
-          </li>
+         <li>
+           <%= link_to "Outbox", outbox_path, class: "nav-link" %>
+         </li>
+         </ul>
+
+
 
           
           <li>
