--- a/app/views/consultations/new.html.erb
+++ b/app/views/consultations/new.html.erb
@@ -1,7 +1,4 @@
-<h1>Consultations#new</h1>
-<p>Find me in app/views/consultations/new.html.erb</p>
-
-<h1>Add a new consultation</h1>
+<h1>How can we help</h1>
 <%= form_for @consultation do |f| %>
   <% if @consultation.errors.any? %>
     <% for message in @consultation.errors.full_messages %>
@@ -13,7 +10,7 @@
 
   <fieldset class="form-group">
     <%= f.label :type_of %>
-    <%= f.text_field :type_of, class: "form-control" %>
+    <%= f.select(:type_of, ['Ortho', 'Cardio','Respiratory', 'Other'])%>
   </fieldset>
   <fieldset class="form-group">
     <%= f.label :brief %>
@@ -24,6 +21,6 @@
     <%= f.text_field :image, class: "form-control" %>
   </fieldset>
   
-  <%= f.submit class: "btn btn-primary" %>
+  <%= f.submit class: "btn btn-primary accept-btn" %>
 
 <% end %>
