--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title><%= content_for?(:title) ? yield(:title) : "foundation-rails" %></title>
+  <title><%= content_for?(:title) ? yield(:title) : "foundation-rails" %></title>
 
-    <%= stylesheet_link_tag    "application" %>
-    <%= javascript_include_tag "vendor/modernizr" %>
-    <%= javascript_include_tag "application" %>
-    <%= csrf_meta_tags %>
-  </head>
+  <%= stylesheet_link_tag    "application" %>
+  <%= javascript_include_tag "vendor/modernizr" %>
+  <%= javascript_include_tag "application" %>
+  <%= csrf_meta_tags %>
+  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+</head>
 <% if !current_user %>
-  <body class="homepage">
+<body class="homepage">
   <% else %>
-
   <body class="loggedin">
-  <% end %>
+    <% end %>
 
 
-  <%= render "header" %>
-  <%= render "flash_messages" %>
-  <main>
-  <div class="row">
-    <%= yield %>
-    </div>
+    <%= render "header" %>
+    <%= render "flash_messages" %>
+    <main>
+      <div class="row">
+        <%= yield %>
+      </div>
     </main>
   </body>
-</html>
+  </html>
