late night css commit

--- a/app/views/application/_flash_messages.html.erb
+++ b/app/views/application/_flash_messages.html.erb
@@ -1,4 +1,4 @@
-<div class="row flashes">
+<div class="row flashes" style="text-align: center; color: #859592;">
   <% flash.each do |name, message| %>
     <div class="alert alert-<%= name %>" role="alert">
       <%= message %>
