--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -284,7 +284,7 @@ height: 100%;
 
 
 .comment_patient{
-  background-color: rgba(100,140,200,0.1);
+  background-color: rgba(100,240,200,0.1);
   position: right;
   margin-right: 20px;
   margin-top: 20px;
@@ -293,7 +293,7 @@ height: 100%;
 }
 
 .comment-right{
-  background-color: rgba(100,140,200,0.5);
+  background-color: rgba(100,200,150,0.2);
   position: left;
   margin-right: 20px;
   margin-top: 20px;
@@ -312,6 +312,10 @@ patient-row{
 .consultation-row.row {
 margin-left: 0;
 margin-right: 0;
+}
+
+.user-row p{
+color: #39403E;
 }
 
 treatment-card{
@@ -336,7 +340,7 @@ textarea{
   border-color:  #00A29C;
 }
 
-centerp{
+.centerp{
   text-align: center;
 }
 
