--- a/app/views/enquiries/new.html.erb
+++ b/app/views/enquiries/new.html.erb
@@ -9,10 +9,10 @@
     <% end %>
   <% end %>
 
-    <fieldset class="form-group">
-      <%= f.label :type_of %>
-      <%= f.text_field :type_of, class: "form-control" %>
-    </fieldset>
+  <fieldset class="form-group">
+    <%= f.label :type_of %>
+    <%= f.select(:type_of, ['Ortho', 'Cardio','Respiratory', 'Other'])%>
+  </fieldset>
     <fieldset class="form-group">
       <%= f.label :brief %>
       <%= f.text_area :brief, class: "form-control" %>
