--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,22 +1,39 @@
 
-  <div class="medium-12 columns">
+<% if user != current_user %>
+<div class="medium-12 columns">
+
+  <%else%>
+  
+  <div class="medium-9 columns">
+    <%end%>
     <div class="card">
-    <div class="row">
-      <div class="image medium-3 columns">
-        <img src="<%= user.image %>">
-        <span class="title"><%= user.username %></span>
-      </div>
-      <div class="content medium-9 columns">
-        <p>I shall be telling this with a sigh  . Somewhere ages and ages hence:   Two roads diverged in a wood, and I —   I took the one less traveled by.  And that has made all the difference.</p>
-        <p class="card-text"><%= user.email %></p>
-        <p class="card-text"><%= user.role %></p>
-        <p class="card-text"><%= user.username %></p>
-        <%= link_to "Enquire", new_user_enquiry_path(user), class: "btn-btn-primary" %>
-        <p class="card-text"><small class="text-muted">Joined <%= distance_of_time_in_words(Time.now, user.created_at) %> ago</small></p>
-      </div>
-      <div class="action">
-        <a href='#'>View</a>
-      </div>
+      <div class="row user-row">
+        <div class="image medium-3 columns">
+          <img src="<%= user.image %>">
+          <div>
+            <span class="title" style="margin-left: 20px;"><%= user.username %></span>
+          </div>
+        </div>
+        <div class="content medium-6 columns">
+          <p class="card-text"><%= user.first_name %> <%= user.last_name %></p>
+          <hr class="hrstyle1">
+          <p>I shall be telling this with a sigh  . Somewhere ages and ages hence:   Two roads diverged in a wood, and I —   I took the one less traveled by.  And that has made all the difference.</p>
+          <hr class="hrstyle1">
+          <p class="card-text">Role: <%= user.role %></p>
+          <p class="card-text">Contact: <%= user.email %></p>
+
+          <p class="card-text"><small class="text-muted">Joined <%= distance_of_time_in_words(Time.now, user.created_at) %> ago</small></p>
+
+
+        </div>
+
+        <div class="content medium-3 columns">
+          <% if user != current_user %>
+          <p class="centerp" style="margin:20px 20px 0 0 ;min-width: 100%"><%= link_to "Enquire", new_user_enquiry_path(user), class: "btn-btn-primary accept-btn" %></p>
+          <br>
+          <p class="centerp" style="margin:20px 20px 0 0 ;min-width: 100%;"><%= link_to "View", user_path(user), class: "btn-btn-primary accept-btn" %></p>
+          <%end%>
+        </div>
       </div>
     </div>
   </div>
