--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,10 @@
-<h1>All Users</h1>
+<h1>My Profile</h1>
 <ul>
     <%= render @user %>
 </ul>
 
-<h1><%= @user.username %></h1>
 <div class="card-deck-wrapper">
   <div class="card-deck">
     <%= render @user.consultations %>
   </div>
 </div>
-
-<%= @user.inspect %>
