changed application.css file for heroku deployment

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -6,7 +6,7 @@
   
   <div class="medium-9 columns">
     <%end%>
-    <div class="card">
+    <div class="card whitebg">
       <div class="row user-row">
         <div class="image medium-3 columns">
           <img src="<%= user.image %>">
