--- a/app/views/treatments/_treatment.html.erb
+++ b/app/views/treatments/_treatment.html.erb
@@ -2,7 +2,7 @@
 
   <div class="card whitebg" style="text-align: center">
   <div class="image medium-1 columns"> 
-    <%#= image_tag(TreatmentType.find(treatment.treatment_type_id).image_path, class: "treatment-icon") %>
+
   </div>
   <div class="row ">
   <div class="content topper">
@@ -10,6 +10,7 @@
   </div>
 
     <div class="content medium-12 columns">
+    <div class="centerp"style="max-width: 50px; margin:0 auto;"><%= image_tag(TreatmentType.find(treatment.treatment_type_id).image_path, class: "treatment-icon") %></div>
       <small class="text-muted">Your recommended treatment for</small>
       <p class="card-text"><p class="fieldname"></p>
       <%= treatment.treatment_for %>
@@ -26,7 +27,6 @@
       <p class="fieldname">Accepted by patient?
 
       </p> <% if treatment.accepted == nil %> <%= "No" %> <% else %><%= "Yes" %><% end %>
-      </p>
       <hr class="hrstyle1">
       <p class="card-text"><p class="fieldname">Added:</p> <small class="text-muted"><%= distance_of_time_in_words(Time.now, treatment.created_at) %> ago</small>
       <p class="card-text">
@@ -39,10 +39,12 @@
     <div class="topperhighlight">
 
     <%= link_to "Accept", accept_treatment_path(treatment), class: "btn btn-success btn-heal patient-accept-btn" %>
+    </div>
     <% else %>
 
-    </div>
+    
     <% end %>
   </div>
+
 
 
