--- a/app/views/treatments/pending_treatments.html.erb
+++ b/app/views/treatments/pending_treatments.html.erb
@@ -1,2 +1,6 @@
 <h1>Pending Treatments</h1>
+<div class="row">
+<div class="medium-12 columns">
 <%= render current_user.treatments_as_patient %>
+</div>
+</div>
