changed landing logo to image tag

--- a/app/views/statics/home.html.erb
+++ b/app/views/statics/home.html.erb
@@ -2,6 +2,7 @@
 <div class="row">
   <div class="mainlogo green content medium-4 columns">
     <%= image_tag("sage-logo")%>
+    <img src="/app/assets/images/rsz_sage-logo_1.png">
     </div>
     <div class="content medium-5 columns">  
     <li class="centerme lower accept-btn">
@@ -19,16 +20,16 @@
     <%else%>
 
     <div class="mainlogo">
+    <img src=".../assets/images/rsz_sage-logo_1.png">
       <%= image_tag("rsz_sage-logo_1")%>
     </div>
-
 
     
     <br>
     <br>
     <br>
 
-    <p style="padding-left: 10px;">
+    <p style="padding-left: 10px; text-decoration: none">
       <%= link_to "our doctors", doctors_path, class: "btn btn-primary btn-lg", role: "button" %>
     </p>
 
